remove extra js code and fixed footer social icons earlier it was not showing

--- a/style.css
+++ b/style.css
@@ -343,7 +343,12 @@ iframe {
 .footer .social-icons i {
   font-size: 2rem;
   margin-right: 1rem;
+  
 }
+.social-icons i{
+  color: rgb(255, 255, 255) !important;
+}
+
 
 @media screen and (max-width: 768px) {
   .code-area {
